# db-hygiene-scanner

./: .db-hygiene.yml  .env.example  .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  vercel.json
.github/workflows/: db-hygiene-scan.yml  pr-scan.yml
api/: index.py
demo/: run_demo.sh
demo/mock_bank_repo/: README.md  VIOLATIONS_MANIFEST.json
demo/mock_bank_repo/src/csharp/: AccountTransactionService.cs  BalanceInquiry.cs  LoanProcessingService.cs  PaymentGateway.cs
demo/mock_bank_repo/src/java/: AccountRepository.java  LoanServicingDAO.java  LoanServicingMapper.xml  TransactionProcessor.java
demo/mock_bank_repo/src/python/: account_query.py  mongo_operations.py  payment_service.py
demo/mock_bank_repo/src/sql/: ddl_scripts.sql  migration_scripts.sql  stored_procedures.sql
harness/: pipeline.yaml
src/db_hygiene_scanner/: __init__.py  cli.py  config.py  models.py
src/db_hygiene_scanner/ai_engine/: __init__.py  classifier.py  client.py  constants.py  fix_generator.py  fix_reviewer.py  prompts.py  template_fixer.py
src/db_hygiene_scanner/github_integration/: __init__.py  pr_creator.py  reviewer_assigner.py
src/db_hygiene_scanner/scanner/: __init__.py  base.py
src/db_hygiene_scanner/scanner/ast_parsers/: __init__.py  base_ast.py  csharp_ast.py  java_ast.py  python_ast.py
src/db_hygiene_scanner/scanner/detectors/: __init__.py  ast_detector.py  long_running_txn.py  read_preference.py  select_star.py  string_concat_sql.py  unbatched_txn.py
src/db_hygiene_scanner/scanner/parsers/: __init__.py  csharp_parser.py  java_parser.py  python_parser.py  sql_parser.py
src/db_hygiene_scanner/utils/: __init__.py  file_discovery.py  logging_config.py  security.py
src/db_hygiene_scanner/web/: __init__.py  app.py  demo_data.json
src/db_hygiene_scanner/web/templates/: index.html
tests/: conftest.py
tests/e2e/: test_demo_run.py
tests/integration/: test_full_scan_pipeline.py
tests/unit/: test_config.py  test_models.py  test_security.py  test_select_star.py  test_string_concat_sql.py
